# hpc_prro

./: .gitignore  README.md  analyze_speedup.py  devcontainer.json  rra_pack_np1.e  rra_pack_np2.e  rra_pack_np4.e  rra_pack_np8.e  rra_scatter_np1.e  rra_scatter_np2.e  rra_scatter_np4.e  rra_scatter_np8.e  set_leader_algorithm.cpp  submit_final_jobs.sh  submit_speedup_place.sh  test.pbs
.devcontainer/: .features.temp.dockerfile  .p10k.zsh  Dockerfile  devcontainer.json
dataset/: generate.py  random-1024-200.csv  random-128-100.csv  (+2 more)
parallel/: CMakeLists.txt  build.sh  main.c
parallel/full/: CMakeLists.txt  build.sh  main.c
parallel/full/include/: raven_roost_algorithm.h
parallel/full/include/mpi/: handlers.h  registers.h
parallel/full/include/phases/: execution.h  initialization.h
parallel/full/include/utils/: dir_file_handler.h  logger.h  objective_function.h
parallel/full/src/: raven_roost_algorithm.c
parallel/full/src/mpi/: handlers.c  wrappers.c
parallel/full/src/phases/: execution.c  initialization.c
parallel/full/src/utils/: dir_file_handler.c  logger.c  objective_function.c  pcg_basic.c  timer.c
parallel/include/: raven_roost_algorithm.h
parallel/include/mpi/: handlers.h  registers.h  wrapper.h  wrappers.h
parallel/include/phases/: execution.h  initialization.h
parallel/include/utils/: dir_file_handler.h  global.h  logger.h  number_generators.h  objective_function.h
parallel/mpi/: CMakeLists.txt  main.c
parallel/mpi/include/phases/: initialization.h
parallel/mpi/include/utils/: global.h  number_generators.h  timer.h
parallel/mpi/src/: raven_roost_algorithm.c
parallel/mpi/src/mpi/: registers.c
parallel/mpi/src/phases/: initialization.c
parallel/mpi/src/utils/: global.c  logger.c  number_generators.c
parallel/src/: raven_roost_algorithm.c
parallel/src/mpi/: handlers.c  registers.c  wrapper.c  wrappers.c
parallel/src/phases/: execution.c  initialization.c
parallel/src/utils/: dir_file_handler.c  global.c  logger.c  number_generators.c  objective_function.c
serial/: CMakeLists.txt  main.c
serial/include/: raven_roost_algorithm.h
serial/include/phases/: execution.h  initialization.h
serial/include/utils/: global.h  logger.h  number_generators.h  objective_function.h  timer.h
serial/src/: raven_roost_algorithm.c
serial/src/phases/: execution.c  initialization.c
serial/src/utils/: global.c  logger.c  number_generators.c  objective_function.c
(+99 files in other folders)
